app/javascript/stylesheets/hitobito/modules/_invoice.scss
.invoice-state {
  background: $gray-lighter;
  margin-left: -20px;
  margin-right: -20px;
  padding: 10px 21px;

  .invoice-state-table {
    float: left;
    margin-bottom: 20px;

    tr th {
      color: $gray;
      font-weight: normal;
      text-align: left;
    }
    tr td,
    tr th {
      padding-right: 30px;
    }
  }

  .invoice-history {
    table {
      float: left;
      margin-left: 30px;

      td:first-child {
        font-size: 6px;
        padding-right: 5px;
      }
      td.red:first-child {
        color: $red;
      }
      td.blue:first-child {
        color: $blue;
      }
      td.green:first-child {
        color: $green;
      }
      td:nth-child(2) {
        padding-right: 20px;
        color: $gray;
        font-weight: normal;
      }
    }
  }
}

.invoice {
  .invoice-info {
    margin-top: 20px;
    width: 100%;
    .invoice-payment {
      float: right;
    }

    .invoice-recipient-address {
      float: left;
    }
  }

  .invoice-articles-table {
    table.header {
      border-bottom: 1px solid $gray-light;
      width: 100%;
      font-size: 16px;
      margin-bottom: 10px;
    }

    table tr th:last-child,
    table tr td:last-child {
      @extend .right;
    }

    .invoice-items-total {
      margin-top: -15px;
      height: 60px;

      table {
        float: right;
        width: 250px;
        tr {
          border-bottom: 1px solid $gray-light;
        }
        tr:first-child {
          border-bottom: none;
        }
      }
    }
  }
}

.invoice-form-recipient-fields {
  background-color: $gray-lighter
}

.invoices-filter {
  margin-bottom: 0;
}

.invoices-daterange-filter {
  margin-top: -2rem;
}

.invoices-filter + div + div {
  margin-top: 20px;
}

.invoice-evaluation-actions > div {
  margin-bottom: 0.3rem;
}

